// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render visible banner, with custom theme 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 1,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          null,
          null,
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          aria-live="polite"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "#00f",
                  },
                ],
              ],
            ]
          }
        >
          Custom theme
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {},
              {
                "borderStyle": "solid",
                "minWidth": 64,
              },
              {
                "minWidth": "auto",
              },
              {
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              {
                "margin": 4,
              },
              {},
              {
                "backgroundColor": "transparent",
              },
              {
                "borderBottomEndRadius": undefined,
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderBottomStartRadius": undefined,
                "borderCurve": "continuous",
                "borderEndEndRadius": undefined,
                "borderEndStartRadius": undefined,
                "borderRadius": 20,
                "borderStartEndRadius": undefined,
                "borderStartStartRadius": undefined,
                "borderTopEndRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "borderTopStartRadius": undefined,
              },
              {
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "pointerEvents": "none",
                },
                {},
                {},
                {
                  "backgroundColor": "transparent",
                },
                {
                  "borderBottomEndRadius": undefined,
                  "borderBottomLeftRadius": undefined,
                  "borderBottomRightRadius": undefined,
                  "borderBottomStartRadius": undefined,
                  "borderCurve": "continuous",
                  "borderEndEndRadius": undefined,
                  "borderEndStartRadius": undefined,
                  "borderRadius": 20,
                  "borderStartEndRadius": undefined,
                  "borderStartStartRadius": undefined,
                  "borderTopEndRadius": undefined,
                  "borderTopLeftRadius": undefined,
                  "borderTopRightRadius": undefined,
                  "borderTopStartRadius": undefined,
                },
                {
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                },
              ]
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 20,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 12,
                        },
                        {
                          "marginHorizontal": 8,
                        },
                        false,
                        {
                          "color": "#043",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders hidden banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 0,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          {
            "position": "absolute",
            "top": 0,
            "width": "100%",
          },
          {
            "transform": [
              {
                "translateY": -0,
              },
            ],
          },
          {
            "opacity": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          aria-live="off"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                ],
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 1,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          null,
          null,
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <View
          style={
            {
              "margin": 8,
            }
          }
        >
          <Image
            accessibilityIgnoresInvertColors={true}
            source={
              {
                "uri": "https://callstack.com/images/team/Satya.png",
              }
            }
            style={
              {
                "height": 40,
                "width": 40,
              }
            }
          />
        </View>
        <Text
          aria-live="polite"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                ],
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {},
              {
                "borderStyle": "solid",
                "minWidth": 64,
              },
              {
                "minWidth": "auto",
              },
              {
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              {
                "margin": 4,
              },
              {},
              {
                "backgroundColor": "transparent",
              },
              {
                "borderBottomEndRadius": undefined,
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderBottomStartRadius": undefined,
                "borderCurve": "continuous",
                "borderEndEndRadius": undefined,
                "borderEndStartRadius": undefined,
                "borderRadius": 20,
                "borderStartEndRadius": undefined,
                "borderStartStartRadius": undefined,
                "borderTopEndRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "borderTopStartRadius": undefined,
              },
              {
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "pointerEvents": "none",
                },
                {},
                {},
                {
                  "backgroundColor": "transparent",
                },
                {
                  "borderBottomEndRadius": undefined,
                  "borderBottomLeftRadius": undefined,
                  "borderBottomRightRadius": undefined,
                  "borderBottomStartRadius": undefined,
                  "borderCurve": "continuous",
                  "borderEndEndRadius": undefined,
                  "borderEndStartRadius": undefined,
                  "borderRadius": 20,
                  "borderStartEndRadius": undefined,
                  "borderStartStartRadius": undefined,
                  "borderTopEndRadius": undefined,
                  "borderTopLeftRadius": undefined,
                  "borderTopRightRadius": undefined,
                  "borderTopStartRadius": undefined,
                },
                {
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                },
              ]
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 20,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 12,
                        },
                        {
                          "marginHorizontal": 8,
                        },
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, with action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 1,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          null,
          null,
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          aria-live="polite"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                ],
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      >
        <View
          collapsable={false}
          style={
            [
              {},
              {
                "borderStyle": "solid",
                "minWidth": 64,
              },
              {
                "minWidth": "auto",
              },
              {
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              {
                "margin": 4,
              },
              {},
              {
                "backgroundColor": "transparent",
              },
              {
                "borderBottomEndRadius": undefined,
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderBottomStartRadius": undefined,
                "borderCurve": "continuous",
                "borderEndEndRadius": undefined,
                "borderEndStartRadius": undefined,
                "borderRadius": 20,
                "borderStartEndRadius": undefined,
                "borderStartStartRadius": undefined,
                "borderTopEndRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "borderTopStartRadius": undefined,
              },
              {
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "pointerEvents": "none",
                },
                {},
                {},
                {
                  "backgroundColor": "transparent",
                },
                {
                  "borderBottomEndRadius": undefined,
                  "borderBottomLeftRadius": undefined,
                  "borderBottomRightRadius": undefined,
                  "borderBottomStartRadius": undefined,
                  "borderCurve": "continuous",
                  "borderEndEndRadius": undefined,
                  "borderEndStartRadius": undefined,
                  "borderRadius": 20,
                  "borderStartEndRadius": undefined,
                  "borderStartStartRadius": undefined,
                  "borderTopEndRadius": undefined,
                  "borderTopLeftRadius": undefined,
                  "borderTopRightRadius": undefined,
                  "borderTopStartRadius": undefined,
                },
                {
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                },
              ]
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 20,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 12,
                        },
                        {
                          "marginHorizontal": 8,
                        },
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                first
              </Text>
            </View>
          </View>
        </View>
        <View
          collapsable={false}
          style={
            [
              {},
              {
                "borderStyle": "solid",
                "minWidth": 64,
              },
              {
                "minWidth": "auto",
              },
              {
                "borderColor": "transparent",
                "borderWidth": 0,
              },
              {
                "margin": 4,
              },
              {},
              {
                "backgroundColor": "transparent",
              },
              {
                "borderBottomEndRadius": undefined,
                "borderBottomLeftRadius": undefined,
                "borderBottomRightRadius": undefined,
                "borderBottomStartRadius": undefined,
                "borderCurve": "continuous",
                "borderEndEndRadius": undefined,
                "borderEndStartRadius": undefined,
                "borderRadius": 20,
                "borderStartEndRadius": undefined,
                "borderStartStartRadius": undefined,
                "borderTopEndRadius": undefined,
                "borderTopLeftRadius": undefined,
                "borderTopRightRadius": undefined,
                "borderTopStartRadius": undefined,
              },
              {
                "shadowColor": "rgba(0, 0, 0, 1)",
                "shadowOffset": {
                  "height": 0,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              [
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
                {
                  "pointerEvents": "none",
                },
                {},
                {},
                {
                  "backgroundColor": "transparent",
                },
                {
                  "borderBottomEndRadius": undefined,
                  "borderBottomLeftRadius": undefined,
                  "borderBottomRightRadius": undefined,
                  "borderBottomStartRadius": undefined,
                  "borderCurve": "continuous",
                  "borderEndEndRadius": undefined,
                  "borderEndStartRadius": undefined,
                  "borderRadius": 20,
                  "borderStartEndRadius": undefined,
                  "borderStartStartRadius": undefined,
                  "borderTopEndRadius": undefined,
                  "borderTopLeftRadius": undefined,
                  "borderTopRightRadius": undefined,
                  "borderTopStartRadius": undefined,
                },
                {
                  "shadowColor": "rgba(0, 0, 0, 1)",
                  "shadowOffset": {
                    "height": 0,
                    "width": 0,
                  },
                  "shadowOpacity": 0,
                  "shadowRadius": 0,
                },
              ]
            }
          />
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            role="button"
            style={
              [
                {
                  "overflow": "hidden",
                },
                {
                  "borderRadius": 20,
                },
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "justifyContent": "center",
                  },
                  {
                    "opacity": 1,
                  },
                  undefined,
                ]
              }
            >
              <Text
                numberOfLines={1}
                selectable={false}
                style={
                  [
                    {
                      "textAlign": "left",
                    },
                    {
                      "color": "rgba(29, 27, 32, 1)",
                      "writingDirection": "ltr",
                    },
                    [
                      {
                        "fontFamily": "System",
                        "fontSize": 14,
                        "fontWeight": "500",
                        "letterSpacing": 0.1,
                        "lineHeight": 20,
                      },
                      [
                        {
                          "marginHorizontal": 16,
                          "marginVertical": 9,
                          "textAlign": "center",
                        },
                        {
                          "marginHorizontal": 12,
                        },
                        {
                          "marginHorizontal": 8,
                        },
                        false,
                        {
                          "color": "rgba(103, 80, 164, 1)",
                          "fontFamily": "System",
                          "fontSize": 14,
                          "fontWeight": "500",
                          "letterSpacing": 0.1,
                          "lineHeight": 20,
                        },
                        undefined,
                      ],
                    ],
                  ]
                }
              >
                second
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and with image 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 1,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          null,
          null,
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <View
          style={
            {
              "margin": 8,
            }
          }
        >
          <Image
            accessibilityIgnoresInvertColors={true}
            source={
              {
                "uri": "https://callstack.com/images/team/Satya.png",
              }
            }
            style={
              {
                "height": 40,
                "width": 40,
              }
            }
          />
        </View>
        <Text
          aria-live="polite"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                ],
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`renders visible banner, without action buttons and without image 1`] = `
<View
  collapsable={false}
  style={
    [
      {},
      {
        "opacity": 1,
      },
      undefined,
      {},
      {
        "backgroundColor": "rgba(247, 242, 250, 1)",
      },
      {
        "borderBottomEndRadius": undefined,
        "borderBottomLeftRadius": undefined,
        "borderBottomRightRadius": undefined,
        "borderBottomStartRadius": undefined,
        "borderCurve": "continuous",
        "borderEndEndRadius": undefined,
        "borderEndStartRadius": undefined,
        "borderRadius": undefined,
        "borderStartEndRadius": undefined,
        "borderStartStartRadius": undefined,
        "borderTopEndRadius": undefined,
        "borderTopLeftRadius": undefined,
        "borderTopRightRadius": undefined,
        "borderTopStartRadius": undefined,
      },
      {
        "shadowColor": "rgba(0, 0, 0, 1)",
        "shadowOffset": {
          "height": 0.55,
          "width": 0,
        },
        "shadowOpacity": 0.19,
        "shadowRadius": 0.79,
      },
    ]
  }
>
  <View
    collapsable={false}
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "pointerEvents": "none",
        },
        {},
        {},
        {
          "backgroundColor": "rgba(247, 242, 250, 1)",
        },
        {
          "borderBottomEndRadius": undefined,
          "borderBottomLeftRadius": undefined,
          "borderBottomRightRadius": undefined,
          "borderBottomStartRadius": undefined,
          "borderCurve": "continuous",
          "borderEndEndRadius": undefined,
          "borderEndStartRadius": undefined,
          "borderRadius": undefined,
          "borderStartEndRadius": undefined,
          "borderStartStartRadius": undefined,
          "borderTopEndRadius": undefined,
          "borderTopLeftRadius": undefined,
          "borderTopRightRadius": undefined,
          "borderTopStartRadius": undefined,
        },
        {
          "shadowColor": "rgba(0, 0, 0, 1)",
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.039,
          "shadowRadius": 0.25,
        },
      ]
    }
  />
  <View
    style={
      [
        {
          "alignSelf": "center",
          "maxWidth": 960,
          "overflow": "hidden",
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      style={
        [
          {
            "height": 0,
          },
        ]
      }
    />
    <View
      collapsable={false}
      onLayout={[Function]}
      style={
        [
          null,
          null,
        ]
      }
    >
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-start",
            "marginBottom": 0,
            "marginHorizontal": 8,
            "marginTop": 16,
          }
        }
      >
        <Text
          aria-live="polite"
          role="alert"
          style={
            [
              {
                "textAlign": "left",
              },
              {
                "color": "rgba(29, 27, 32, 1)",
                "writingDirection": "ltr",
              },
              [
                {
                  "fontFamily": "System",
                  "fontSize": 14,
                  "fontWeight": "400",
                  "letterSpacing": 0.25,
                  "lineHeight": 20,
                },
                [
                  {
                    "flex": 1,
                    "margin": 8,
                  },
                  {
                    "color": "rgba(29, 27, 32, 1)",
                  },
                ],
              ],
            ]
          }
        >
          Two line text string with two actions. One to two lines is preferable on mobile.
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "flex-end",
            "margin": 4,
          }
        }
      />
    </View>
  </View>
</View>
`;
